--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,16 @@ after_success:
   - docker push ebbemelosorensen/multi-nginx
   - docker push ebbemelosorensen/multi-server
   - docker push ebbemelosorensen/multi-worker
+
+  deploy:
+    provider: elasticbeanstalk
+    region: us-east-2
+    app: multi-docker
+    env: MultiDocker-env
+    bucket_name: elasticbeanstalk-us-east-2-907718596887
+    bucket-path: docker-multi
+    on:
+      branch: master
+      acess_key_id: $AWS_ACCESS_KEY
+      secret_access_key: $AWS_SECRET_KEY
   
