--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ after_success:
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 
-  # Take those images and push them to docker hub
+  # Take those images and push them to docker hub .. dummy comment
   - docker push ebbemelosorensen/multi-client
   - docker push ebbemelosorensen/multi-nginx
   - docker push ebbemelosorensen/multi-server
